--- a/index.html.html
+++ b/index.html.html
@@ -54,6 +54,6 @@
 
         <input type="submit" value="Submit">
         <h1>THANK YOU!</h1>
-        <h2> You will receive mail if any Query conduct through the email!</h2>
+        <h2> You will receive mail if any Query contact through the email!</h2>
 </body>
 </html>
